fix: sidebar and navbar spacing/sizing

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -72,12 +72,12 @@
         background: rgba(0, 0, 0, 0.2);
         backdrop-filter: blur(20px);
         display: grid;
-        grid-template-columns: 5fr 20fr 5fr;
+        grid-template-columns: 10fr 20fr 10fr;
     }
 }
 
 @media (min-width: 971px) and (max-width: 1350px) {
     .nav {
-        padding: 10px 10%;
+        padding: 10px 15px;
     }
 }
